// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should not transform when single line 1`] = `
"<h1>Admonitions</h1>
<blockquote>
<p>[!NOTE] test</p>
</blockquote>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should not transform when title is not in form [!NOTE] but legacy **Note** 1`] = `
"<h1>Admonitions</h1>
<blockquote>
<p><strong>Note</strong>
test</p>
</blockquote>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should transform 1`] = `
"<h1>Admonitions</h1>
<div class="gfm-alert gfm-alert-type-note">
<p class="gfm-alert-title">Note</p>
<p>test</p>
</div>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should transform GitHub example (until 2024-01-02) with default config 1`] = `
"<h1>Admonitions</h1>
<div class="gfm-alert gfm-alert-type-note">
<p class="gfm-alert-title">Note</p>
<p>Highlights information that users should take into account, even when skimming.</p>
</div>
<div class="gfm-alert gfm-alert-type-tip">
<p class="gfm-alert-title">Tip</p>
<p>Optional information to help a user be more successful.</p>
</div>
<div class="gfm-alert gfm-alert-type-important">
<p class="gfm-alert-title">Important</p>
<p>Crucial information necessary for users to succeed.</p>
</div>
<div class="gfm-alert gfm-alert-type-warning">
<p class="gfm-alert-title">Warning</p>
<p>Critical content demanding immediate user attention due to potential risks.</p>
</div>
<div class="gfm-alert gfm-alert-type-caution">
<p class="gfm-alert-title">Caution</p>
<p>Negative potential consequences of an action.</p>
</div>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should transform a plain blockquote #13 1`] = `
"<blockquote>
<p>blockquote</p>
</blockquote>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should transform a plain blockquote #14 1`] = `
"<blockquote>
<blockquote>
<p>line 1
line 2
line 3</p>
</blockquote>
</blockquote>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should transform when title has 2 trailing spaces from issue #12 1`] = `
"<h1>Admonitions</h1>
<div class="gfm-alert gfm-alert-type-warning">
<p class="gfm-alert-title">Warning</p>
<p>Critical content demanding immediate user attention due to potential risks.</p>
</div>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should transform with nested ones 1`] = `
"<h1>Admonitions</h1>
<div class="gfm-alert gfm-alert-type-note">
<p class="gfm-alert-title">Note</p>
<p>test</p>
<div class="gfm-alert gfm-alert-type-note">
<p class="gfm-alert-title">Note</p>
<p>test</p>
<div class="gfm-alert gfm-alert-type-warning">
<p class="gfm-alert-title">Warning</p>
<p>test</p>
</div>
</div>
</div>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should transform with ordered lists from issue #4 1`] = `
"<h1>Admonitions</h1>
<div class="gfm-alert gfm-alert-type-note">
<p class="gfm-alert-title">Note</p>
<p></p>
<ol>
<li>Here you go</li>
<li>Here you go again</li>
<li>Here you go one more time</li>
</ol>
</div>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should transform with title with trailing whitespaces to be trimmed 1`] = `
"<h1>Admonitions</h1>
<div class="gfm-alert gfm-alert-type-note">
<p class="gfm-alert-title">Note</p>
<p>test</p>
</div>"
`;

exports[`GitHub beta blockquote-based admonitions with titles like [!NOTE] > should transform with unordered lists from issue #4 1`] = `
"<h1>Admonitions</h1>
<div class="gfm-alert gfm-alert-type-note">
<p class="gfm-alert-title">Note</p>
<p></p>
<ul>
<li>Here you go</li>
<li>Here you go again</li>
<li>Here you go one more time</li>
</ul>
</div>"
`;
